# mcpacket

./: README.md  setup.cfg
examples/: info.py
src/mcpacket/: buffer.py  protocol.py
