[metadata]
name = mc-packet-TheRealJoe24
version = 0.0.1
author = Brandon Stevens
author_email = therealjoe24mc@outlook.com
description = A lightweight minecraft server list ping protocol implementation
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/TheRealJoe24/mcpacket
project_urls = 
    Bug Tracker = https://github.com/TheRealJoe24/mcpacket/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
